@@ -1649,6 +1649,7 @@ this variable.  I think."
 					     (const post-mail))
 			(checklist :inline t :greedy t
 				   (const :format "%v " address)
+				   (const global)
 				   (const :format "%v " prompt-address)
 				   (const :format "%v " physical-address)
 				   (const virtual)
