@@ -1,3 +1,8 @@
+2013-08-13  Glenn Morris  <rgm@gnu.org>
+
+	* epa.texi (Encrypting/decrypting gpg files):
+	Rename nodes to avoid characters that can cause Texinfo problems.
+
 2013-08-12  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus.texi (Mail Source Specifiers): Fix description for pop3's :leave.
