@@ -1,3 +1,11 @@
+2013-08-13  Glenn Morris  <rgm@gnu.org>
+
+	* gnus-icalendar.el (gnus-icalendar-org-capture-file): Fix type.
+
+	* gnus.el (gnus-valid-select-methods): Fix type.
+
+	* nnimap.el (nnimap-request-articles-find-limit): Fix type, version.
+
 2013-08-12  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mm-decode.el (mm-display-external): Run a timer for the temp files
